{
  "version": 4,
  "terraform_version": "1.15.6",
  "serial": 81,
  "lineage": "49b99f9c-dc19-d256-5c7d-8b33ce845ce9",
  "resources": [
    {
      "module": "module.blog_alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-2:884393797085:loadbalancer/app/blog-alb/2ec2b5a76c09ac35",
            "arn_suffix": "app/blog-alb/2ec2b5a76c09ac35",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "blog-alb-419063925.us-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": true,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": true,
            "enable_http2": true,
            "enable_prefix_for_ipv6_source_nat": "off",
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "health_check_logs": [
              {
                "enabled": false
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:884393797085:loadbalancer/app/blog-alb/2ec2b5a76c09ac35",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "blog-alb",
            "preserve_host_header": false,
            "region": "us-west-2",
            "security_groups": [
              "sg-0888ebe9697443b35",
              "sg-0b7e67c99aee486a5"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-03d4a8ef541ca7bee"
              },
              {
                "subnet_id": "subnet-078df6b210a050ea2"
              },
              {
                "subnet_id": "subnet-0826f5177b392c63c"
              }
            ],
            "subnets": [
              "subnet-03d4a8ef541ca7bee",
              "subnet-078df6b210a050ea2",
              "subnet-0826f5177b392c63c"
            ],
            "tags": {
              "Environment": "dev"
            },
            "tags_all": {
              "Environment": "dev"
            },
            "vpc_id": "vpc-0bbe9b45557116a5a",
            "xff_header_processing_mode": "append",
            "zone_id": "Z1H1FL5HABSF5"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:884393797085:loadbalancer/app/blog-alb/2ec2b5a76c09ac35"
          },
          "dependencies": [
            "module.blog_alb.aws_security_group.this",
            "module.blog_sg.aws_security_group.this",
            "module.blog_sg.aws_security_group.this_name_prefix",
            "module.blog_vpc.aws_subnet.public",
            "module.blog_vpc.aws_vpc.this",
            "module.blog_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.blog_alb",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:884393797085:security-group/sg-0b7e67c99aee486a5",
            "description": "Security group for blog-alb application load balancer",
            "egress": [],
            "id": "sg-0b7e67c99aee486a5",
            "ingress": [],
            "name": "blog-alb-20260624140717997400000006",
            "name_prefix": "blog-alb-",
            "owner_id": "884393797085",
            "region": "us-west-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev"
            },
            "tags_all": {
              "Environment": "dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bbe9b45557116a5a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "884393797085",
            "id": "sg-0b7e67c99aee486a5",
            "region": "us-west-2"
          },
          "dependencies": [
            "module.blog_vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.blog_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:884393797085:security-group/sg-0888ebe9697443b35",
            "description": "Security Group managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All protocols",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0888ebe9697443b35",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "blog-20260624140715390600000002",
            "name_prefix": "blog-",
            "owner_id": "884393797085",
            "region": "us-west-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "blog"
            },
            "tags_all": {
              "Name": "blog"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-0bbe9b45557116a5a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "884393797085",
            "id": "sg-0888ebe9697443b35",
            "region": "us-west-2"
          },
          "dependencies": [
            "module.blog_vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.blog_vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:884393797085:internet-gateway/igw-06693478c4813f2b5",
            "id": "igw-06693478c4813f2b5",
            "owner_id": "884393797085",
            "region": "us-west-2",
            "tags": {
              "Environment": "dev",
              "Name": "dev",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0bbe9b45557116a5a"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "884393797085",
            "id": "igw-06693478c4813f2b5",
            "region": "us-west-2"
          },
          "dependencies": [
            "module.blog_vpc.aws_vpc.this",
            "module.blog_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.blog_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:884393797085:subnet/subnet-0826f5177b392c63c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0826f5177b392c63c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "884393797085",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-west-2",
            "tags": {
              "Environment": "dev",
              "Name": "dev-public-us-west-2a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-public-us-west-2a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0bbe9b45557116a5a"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "884393797085",
            "id": "subnet-0826f5177b392c63c",
            "region": "us-west-2"
          },
          "dependencies": [
            "module.blog_vpc.aws_vpc.this",
            "module.blog_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:884393797085:subnet/subnet-03d4a8ef541ca7bee",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03d4a8ef541ca7bee",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "884393797085",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-west-2",
            "tags": {
              "Environment": "dev",
              "Name": "dev-public-us-west-2b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-public-us-west-2b",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0bbe9b45557116a5a"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "884393797085",
            "id": "subnet-03d4a8ef541ca7bee",
            "region": "us-west-2"
          },
          "dependencies": [
            "module.blog_vpc.aws_vpc.this",
            "module.blog_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:884393797085:subnet/subnet-078df6b210a050ea2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.0.103.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-078df6b210a050ea2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "884393797085",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-west-2",
            "tags": {
              "Environment": "dev",
              "Name": "dev-public-us-west-2c",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-public-us-west-2c",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0bbe9b45557116a5a"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "884393797085",
            "id": "subnet-078df6b210a050ea2",
            "region": "us-west-2"
          },
          "dependencies": [
            "module.blog_vpc.aws_vpc.this",
            "module.blog_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.blog_vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:884393797085:vpc/vpc-0bbe9b45557116a5a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-01132f4f604442fe8",
            "default_route_table_id": "rtb-00a8ac3abd072e858",
            "default_security_group_id": "sg-04ede2efcaabf578d",
            "dhcp_options_id": "dopt-0b9b1879aaabf2e3b",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0bbe9b45557116a5a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-00a8ac3abd072e858",
            "owner_id": "884393797085",
            "region": "us-west-2",
            "tags": {
              "Environment": "dev",
              "Name": "dev",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev",
              "Terraform": "true"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "884393797085",
            "id": "vpc-0bbe9b45557116a5a",
            "region": "us-west-2"
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}